src/main/java/org/example/mirimilibe/global/success/SuccessCode.java
package org.example.mirimilibe.global.success;

import org.springframework.http.HttpStatus;

public interface SuccessCode {

	HttpStatus getHttpStatus();

	String getCode();

	String getMessage();
}